test/e2e/fail_compile/type_errors/ct_required_forwarded_parameter.cst
runtime fn source() -> num { 1 }

fn reserve(count: !runtime num) -> num {
    count
}

fn wrap(count: num) -> num {
    reserve(count)
}

fn main() -> runtime num {
    wrap(source())
}
